--- a/example/index.html
+++ b/example/index.html
@@ -8,8 +8,8 @@
 
   <meta property="og:title" content="React Notification System">
   <meta property="og:description" content="A complete and totally customizable component for notifications in React.">
-  <meta property="og:url" content="http://igorprado.github.io/react-notification-system/">
-  <meta property="og:image" content="http://igorprado.com/react-notification-system/src/images/screenshot.jpg">
+  <meta property="og:url" content="http://cristian-sima.github.io/react-notification-system-17/">
+  <meta property="og:image" content="http://cristian-sima.com/react-notification-system-17/src/images/screenshot.jpg">
 
   <meta name="keywords" content="react, react component, notification, notification system">
   <meta name="viewport" content="width=device-width, initial-scale=1">
